Adding some modifications

--- a/practice one/practice-one.html
+++ b/practice one/practice-one.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicing Grid Part one</title>
+    <title>Our nature</title>
     <link rel="stylesheet" href="style/practice-one.css">
 </head>
 <body>
@@ -15,15 +15,15 @@
                 <a href="#">Sources</a>
             </div>
             <div class="header-two">
-                <a href="#">Programs</a>
-                <a href="#">Campuses</a>
-                <a href="#">Scholarships</a>
+                <a href="#">Seasons</a>
+                <a href="#">Contents</a>
+                <a href="#">Weather</a>
 
             </div>
             <div class="header-three">
-                <a href="#">Account</a>
-                <a href="#">Form</a>
-                <a href="#">Feedback</a>
+                <a href="#">W-Changes</a>
+                <a href="#">Race</a>
+                <a href="#">Languages</a>
 
             </div>
 
@@ -34,27 +34,46 @@
     <main>
         <div class="main">
             <div class="left">
-                <h2>Main display</h2>
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpikbest.com%2Fphoto%2Ffree-best-morning-nature-pictures-%2526-images_9190359.html&psig=AOvVaw3KtFiCnmII580Wu9wEnbfM&ust=1710167803162000&source=images&cd=vfe&opi=89978449&ved=0CBMQjRxqFwoTCJCTiN316YQDFQAAAAAdAAAAABAI" alt="picture of the nature one">
-                <img src="" alt="picture of the nature two">
-                <img src="" alt="picture of the nature three">
+                <h2>The Nature speaks</h2>
+                <img src="images/nature-four.jpg" alt="picture of the nature one">
+                <img src="images/nature-three.jpg" alt="picture of the nature two">
+                <img src="images/autumn-poolside.jpg" alt="picture of the nature three">
             </div>
             <div class="right-one">
-                <h3>Additional Content</h3>
+                <h3>Additional links</h3>
                 <div class="links">
-                    <a href="#">Quotes</a>
-                    <a href="#">Images</a>
-                    <a href="#">Videos</a>
+                    <a href="#">Nature</a>
+                    <a href="#">Weather today</a>
+                    <a href="#">Videos about nature</a>
                 </div>
                 
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, neque. Officia ducimus inventore voluptatibus minus, illo aperiam quo vel qui ipsam nam ullam harum animi facilis, cum perspiciatis maiores earum!
+               <p>
+                Today's society, we are all seeing how interesting both life and things are becoming.
+                As things are becoming more and more interesting, we can say that things are improving and
+                this improvement can also appear to some as <label>Changes</label>
+                
                 </p> 
+                <p>
+                    The Tehnology is now existing in this centure, while years ago it used to not be as it is today.
+                    There is everyday innovations and inventions.
+                </p>
+                <p>
+                    You probably asked yourself a question trying to identify how the Technology or the innovations are impacting your life and sometimes you are doubting at it, 
+                    not believing that you are being half way killed. You need to wake up and be aware of what is going on today and decide quickly how to deal with that.
+                </p>
 
             </div>
             <div class="right-two">
-                <h3>External Content</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Aperiam nobis ipsa aliquid magnam exercitationem quaerat ipsum modi obcaecati quos deleniti eos beatae nostrum, eaque, omnis aut odio, a suscipit autem!
+                <h3>NOTE</h3>
+                <p>
+                    There is a serious war between you and the technology; you cannot even end it or stop it
+                    because your life started depending on it since then, maybe you were born under these instructions
+                    even technology instructions. You are the son of the technology and you are depending half way on it.
+
+                </p>
+                <p>
+                    You can't stop it because you are already enjoying it and that you are happy, addicted of it; you can't 
+                    skip that addiction.
                 </p>
             </div>
 
