--- a/practice one/practice-one.html
+++ b/practice one/practice-one.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our nature</title>
+    <title>I Love the Nature</title>
     <link rel="stylesheet" href="style/practice-one.css">
 </head>
 <body>
@@ -22,7 +22,7 @@
             </div>
             <div class="header-three">
                 <a href="#">W-Changes</a>
-                <a href="#">Race</a>
+                <a href="#">Races</a>
                 <a href="#">Languages</a>
 
             </div>
@@ -46,17 +46,20 @@
                     <a href="#">Weather today</a>
                     <a href="#">Videos about nature</a>
                 </div>
-                
+                <br>
                <p>
                 Today's society, we are all seeing how interesting both life and things are becoming.
                 As things are becoming more and more interesting, we can say that things are improving and
                 this improvement can also appear to some as <label>Changes</label>
                 
                 </p> 
+                <br>
                 <p>
+
                     The Tehnology is now existing in this centure, while years ago it used to not be as it is today.
                     There is everyday innovations and inventions.
                 </p>
+                <br>
                 <p>
                     You probably asked yourself a question trying to identify how the Technology or the innovations are impacting your life and sometimes you are doubting at it, 
                     not believing that you are being half way killed. You need to wake up and be aware of what is going on today and decide quickly how to deal with that.
@@ -85,6 +88,7 @@
             <div class="infos">
                 <div id="location">
                     <h4>Social Media</h4>
+                    <p>working on it</p>
                 </div>
                 <div id="address">
                     <h4>How to get us?</h4>
@@ -95,7 +99,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>copyright &copy; March 2024</p>
+                <p>copyright &copy; March 2024 | By Jean Robert Nakilu Tshangu</p>
 
             </div>
 
